log
Wed 27 Mar 2024 02:38:07 PM UTC: 
 tests:  0|6
total_score: 0/70
d00c6d5
Wed 27 Mar 2024 05:42:23 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
ab39a96
Wed 27 Mar 2024 05:44:48 PM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
a104693
Wed 27 Mar 2024 05:46:41 PM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
3bdb77e
Wed 27 Mar 2024 05:47:18 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
7416efe
Wed 27 Mar 2024 05:48:42 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
b151009
Wed 27 Mar 2024 05:49:08 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
b0a9514
Wed 27 Mar 2024 05:51:07 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|0
395288e
Wed 27 Mar 2024 05:51:41 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c69fb82
Wed 27 Mar 2024 05:52:08 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
3f89c09
Wed 27 Mar 2024 05:52:44 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:53:14: error: ‘List’ {aka ‘struct List’} has no member named ‘data’
   53 |   return list->data[L->current];
      |              ^~
list.c:53:21: error: ‘L’ undeclared (first use in this function)
   53 |   return list->data[L->current];
      |                     ^
list.c:53:21: note: each undeclared identifier is reported only once for each function it appears in
list.c:54:1: error: control reaches end of non-void function [-Werror=return-type]
   54 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
2053812
Wed 27 Mar 2024 05:52:55 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:53:14: error: ‘List’ {aka ‘struct List’} has no member named ‘data’
   53 |   return list->data[list->current];
      |              ^~
list.c:54:1: error: control reaches end of non-void function [-Werror=return-type]
   54 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
119817a
Wed 27 Mar 2024 05:53:03 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:53:14: error: ‘list’ is a pointer; did you mean to use ‘->’?
   53 |   return list.data[list->current];
      |              ^
      |              ->
list.c:54:1: error: control reaches end of non-void function [-Werror=return-type]
   54 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
c8b0919
Wed 27 Mar 2024 05:53:13 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:53:14: error: ‘List’ {aka ‘struct List’} has no member named ‘data’
   53 |   return list->data[list->current];
      |              ^~
list.c:54:1: error: control reaches end of non-void function [-Werror=return-type]
   54 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
6623a80
Wed 27 Mar 2024 05:59:41 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:53:25: error: ‘Node’ has no member named ‘dat’; did you mean ‘data’?
   53 |   return list->current->dat;
      |                         ^~~
      |                         data
list.c:54:1: error: control reaches end of non-void function [-Werror=return-type]
   54 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
4d23c1a
Wed 27 Mar 2024 05:59:46 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
cbf3612
Wed 27 Mar 2024 06:02:01 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
9244b58
Wed 27 Mar 2024 06:03:44 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
856f261
Wed 27 Mar 2024 06:33:24 PM UTC: 
 list.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
02dbd6b
Wed 27 Mar 2024 06:46:24 PM UTC: 
 list.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
0b5d5fa
Wed 27 Mar 2024 06:48:52 PM UTC: 
 list.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  10|2
total_score: 45/70
b483ecf
Wed 27 Mar 2024 06:49:32 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
77e6ad7
Wed 27 Mar 2024 06:52:27 PM UTC: 
 list.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
b141b7f
Wed 27 Mar 2024 06:56:50 PM UTC: 
 list.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘popFront’:
list.c:119:9: error: unused variable ‘aux’ [-Werror=unused-variable]
  119 |   Node *aux = list->head;
      |         ^~~
cc1: all warnings being treated as errors
Compilation failed
6017642
Wed 27 Mar 2024 06:57:12 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  11|1
total_score: 55/70
def74be
Wed 27 Mar 2024 06:57:44 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘popFront’:
list.c:125:3: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
  125 |   return;// popCurrent(list);
      |   ^~~~~~
list.c:115:8: note: declared here
  115 | void * popFront(List * list)
      |        ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
30d92c6
Wed 27 Mar 2024 06:58:08 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘popFront’:
list.c:126:1: error: control reaches end of non-void function [-Werror=return-type]
  126 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1785e09
